src/interpreters/mfsl/mfslParser.output
Terminals unused in grammar

    "/"
    ","
    "*"
    "("
    ")"


Grammar

    0 $accept: script $end

    1 script: Tool Input ContentsElements

    2 Number: "integer"
    3       | "double"

    4 String: "single quoted_string"
    5       | "double quoted_string"

    6 Tool: "tool" ":" "name"

    7 Input: "input" ":" "name"
    8      | "input" ":" String

    9 ContentsElements: ContentsElement
   10                 | ContentsElements ContentsElement

   11 ContentsElement: Option
   12                | ChoiceDeclaration
   13                | ChoiceSetting
   14                | CaseStatement

   15 Option: "option"
   16       | "option" OptionValue

   17 OptionValue: "name"
   18            | Number
   19            | String

   20 ChoiceDeclaration: "choice" "name" ":" Choices ";"

   21 Choices: "name"
   22        | Choices "|" "name"

   23 ChoiceSetting: "set" "name" "=" "name" ";"

   24 CaseStatement: "case" "name" ":" Cases ";"

   25 Cases: Case
   26      | Cases Case

   27 Case: "name" ":" ContentsElements ";"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "|" (258) 22
    ";" (259) 20 23 24 27
    ":" (260) 6 7 8 20 24 27
    "=" (261) 23
    "/" (262)
    "," (263)
    "*" (264)
    "(" (265)
    ")" (266)
    "tool" (267) 6
    "input" (268) 7 8
    "choice" (269) 20
    "set" (270) 23
    "case" (271) 24
    "integer" <std::string> (272) 2
    "double" <std::string> (273) 3
    "single quoted_string" <std::string> (274) 4
    "double quoted_string" <std::string> (275) 5
    "name" <std::string> (276) 6 7 17 20 21 22 23 24 27
    "option" <std::string> (277) 15 16


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    script (24)
        on left: 1
        on right: 0
    Number <std::string> (25)
        on left: 2 3
        on right: 18
    String <std::string> (26)
        on left: 4 5
        on right: 8 19
    Tool (27)
        on left: 6
        on right: 1
    Input (28)
        on left: 7 8
        on right: 1
    ContentsElements (29)
        on left: 9 10
        on right: 1 10 27
    ContentsElement (30)
        on left: 11 12 13 14
        on right: 9 10
    Option (31)
        on left: 15 16
        on right: 11
    OptionValue <std::string> (32)
        on left: 17 18 19
        on right: 16
    ChoiceDeclaration (33)
        on left: 20
        on right: 12
    Choices (34)
        on left: 21 22
        on right: 20 22
    ChoiceSetting (35)
        on left: 23
        on right: 13
    CaseStatement (36)
        on left: 24
        on right: 14
    Cases (37)
        on left: 25 26
        on right: 24 26
    Case (38)
        on left: 27
        on right: 25 26


State 0

    0 $accept: • script $end

    "tool"  shift, and go to state 1

    script  go to state 2
    Tool    go to state 3


State 1

    6 Tool: "tool" • ":" "name"

    ":"  shift, and go to state 4


State 2

    0 $accept: script • $end

    $end  shift, and go to state 5


State 3

    1 script: Tool • Input ContentsElements

    "input"  shift, and go to state 6

    Input  go to state 7


State 4

    6 Tool: "tool" ":" • "name"

    "name"  shift, and go to state 8


State 5

    0 $accept: script $end •

    $default  accept


State 6

    7 Input: "input" • ":" "name"
    8      | "input" • ":" String

    ":"  shift, and go to state 9


State 7

    1 script: Tool Input • ContentsElements

    "choice"  shift, and go to state 10
    "set"     shift, and go to state 11
    "case"    shift, and go to state 12
    "option"  shift, and go to state 13

    ContentsElements   go to state 14
    ContentsElement    go to state 15
    Option             go to state 16
    ChoiceDeclaration  go to state 17
    ChoiceSetting      go to state 18
    CaseStatement      go to state 19


State 8

    6 Tool: "tool" ":" "name" •

    $default  reduce using rule 6 (Tool)


State 9

    7 Input: "input" ":" • "name"
    8      | "input" ":" • String

    "single quoted_string"  shift, and go to state 20
    "double quoted_string"  shift, and go to state 21
    "name"                  shift, and go to state 22

    String  go to state 23


State 10

   20 ChoiceDeclaration: "choice" • "name" ":" Choices ";"

    "name"  shift, and go to state 24


State 11

   23 ChoiceSetting: "set" • "name" "=" "name" ";"

    "name"  shift, and go to state 25


State 12

   24 CaseStatement: "case" • "name" ":" Cases ";"

    "name"  shift, and go to state 26


State 13

   15 Option: "option" •
   16       | "option" • OptionValue

    "integer"               shift, and go to state 27
    "double"                shift, and go to state 28
    "single quoted_string"  shift, and go to state 20
    "double quoted_string"  shift, and go to state 21
    "name"                  shift, and go to state 29

    $default  reduce using rule 15 (Option)

    Number       go to state 30
    String       go to state 31
    OptionValue  go to state 32


State 14

    1 script: Tool Input ContentsElements •
   10 ContentsElements: ContentsElements • ContentsElement

    "choice"  shift, and go to state 10
    "set"     shift, and go to state 11
    "case"    shift, and go to state 12
    "option"  shift, and go to state 13

    $default  reduce using rule 1 (script)

    ContentsElement    go to state 33
    Option             go to state 16
    ChoiceDeclaration  go to state 17
    ChoiceSetting      go to state 18
    CaseStatement      go to state 19


State 15

    9 ContentsElements: ContentsElement •

    $default  reduce using rule 9 (ContentsElements)


State 16

   11 ContentsElement: Option •

    $default  reduce using rule 11 (ContentsElement)


State 17

   12 ContentsElement: ChoiceDeclaration •

    $default  reduce using rule 12 (ContentsElement)


State 18

   13 ContentsElement: ChoiceSetting •

    $default  reduce using rule 13 (ContentsElement)


State 19

   14 ContentsElement: CaseStatement •

    $default  reduce using rule 14 (ContentsElement)


State 20

    4 String: "single quoted_string" •

    $default  reduce using rule 4 (String)


State 21

    5 String: "double quoted_string" •

    $default  reduce using rule 5 (String)


State 22

    7 Input: "input" ":" "name" •

    $default  reduce using rule 7 (Input)


State 23

    8 Input: "input" ":" String •

    $default  reduce using rule 8 (Input)


State 24

   20 ChoiceDeclaration: "choice" "name" • ":" Choices ";"

    ":"  shift, and go to state 34


State 25

   23 ChoiceSetting: "set" "name" • "=" "name" ";"

    "="  shift, and go to state 35


State 26

   24 CaseStatement: "case" "name" • ":" Cases ";"

    ":"  shift, and go to state 36


State 27

    2 Number: "integer" •

    $default  reduce using rule 2 (Number)


State 28

    3 Number: "double" •

    $default  reduce using rule 3 (Number)


State 29

   17 OptionValue: "name" •

    $default  reduce using rule 17 (OptionValue)


State 30

   18 OptionValue: Number •

    $default  reduce using rule 18 (OptionValue)


State 31

   19 OptionValue: String •

    $default  reduce using rule 19 (OptionValue)


State 32

   16 Option: "option" OptionValue •

    $default  reduce using rule 16 (Option)


State 33

   10 ContentsElements: ContentsElements ContentsElement •

    $default  reduce using rule 10 (ContentsElements)


State 34

   20 ChoiceDeclaration: "choice" "name" ":" • Choices ";"

    "name"  shift, and go to state 37

    Choices  go to state 38


State 35

   23 ChoiceSetting: "set" "name" "=" • "name" ";"

    "name"  shift, and go to state 39


State 36

   24 CaseStatement: "case" "name" ":" • Cases ";"

    "name"  shift, and go to state 40

    Cases  go to state 41
    Case   go to state 42


State 37

   21 Choices: "name" •

    $default  reduce using rule 21 (Choices)


State 38

   20 ChoiceDeclaration: "choice" "name" ":" Choices • ";"
   22 Choices: Choices • "|" "name"

    "|"  shift, and go to state 43
    ";"  shift, and go to state 44


State 39

   23 ChoiceSetting: "set" "name" "=" "name" • ";"

    ";"  shift, and go to state 45


State 40

   27 Case: "name" • ":" ContentsElements ";"

    ":"  shift, and go to state 46


State 41

   24 CaseStatement: "case" "name" ":" Cases • ";"
   26 Cases: Cases • Case

    ";"     shift, and go to state 47
    "name"  shift, and go to state 40

    Case  go to state 48


State 42

   25 Cases: Case •

    $default  reduce using rule 25 (Cases)


State 43

   22 Choices: Choices "|" • "name"

    "name"  shift, and go to state 49


State 44

   20 ChoiceDeclaration: "choice" "name" ":" Choices ";" •

    $default  reduce using rule 20 (ChoiceDeclaration)


State 45

   23 ChoiceSetting: "set" "name" "=" "name" ";" •

    $default  reduce using rule 23 (ChoiceSetting)


State 46

   27 Case: "name" ":" • ContentsElements ";"

    "choice"  shift, and go to state 10
    "set"     shift, and go to state 11
    "case"    shift, and go to state 12
    "option"  shift, and go to state 13

    ContentsElements   go to state 50
    ContentsElement    go to state 15
    Option             go to state 16
    ChoiceDeclaration  go to state 17
    ChoiceSetting      go to state 18
    CaseStatement      go to state 19


State 47

   24 CaseStatement: "case" "name" ":" Cases ";" •

    $default  reduce using rule 24 (CaseStatement)


State 48

   26 Cases: Cases Case •

    $default  reduce using rule 26 (Cases)


State 49

   22 Choices: Choices "|" "name" •

    $default  reduce using rule 22 (Choices)


State 50

   10 ContentsElements: ContentsElements • ContentsElement
   27 Case: "name" ":" ContentsElements • ";"

    ";"       shift, and go to state 51
    "choice"  shift, and go to state 10
    "set"     shift, and go to state 11
    "case"    shift, and go to state 12
    "option"  shift, and go to state 13

    ContentsElement    go to state 33
    Option             go to state 16
    ChoiceDeclaration  go to state 17
    ChoiceSetting      go to state 18
    CaseStatement      go to state 19


State 51

   27 Case: "name" ":" ContentsElements ";" •

    $default  reduce using rule 27 (Case)
